<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_notes"
            android:icon="@drawable/ic_assignment_black_24dp"
            android:iconTint="@color/pluralsight_orange"
            android:title="@string/navig_menu_notes_name" />
        <item
            android:id="@+id/nav_courses"
            android:icon="@drawable/ic_slideshow_black_24dp"
            android:iconTint="@color/pluralsight_orange"
            android:title="@string/navig_menu_courses" />
    </group>

    <item android:title="@string/navig_menu_communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/navig_menu_share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/navig_menu_send" />
        </menu>
    </item>

</menu>
